ToolLoader: Code refactor