@@ -2,11 +2,10 @@ package mars.venus;
 
 import mars.tools.*;
 import mars.util.*;
+
 import javax.swing.*;
 import java.awt.event.*;
-import java.io.*;
 import java.util.*;
-import java.util.zip.*;
 import java.lang.reflect.*;
 
 /*
@@ -49,7 +48,6 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  * @author Pete Sanderson with help from Bret Barker
  * @version August 2005
  */
-
 public class ToolLoader {
 
 	private static final String CLASS_PREFIX = "mars.tools.";
@@ -69,14 +67,14 @@ public class ToolLoader {
 	 */
 	public JMenu buildToolsMenu() {
 		JMenu menu = null;
-		ArrayList marsToolList = loadMarsTools();
+		ArrayList<MarsToolClassAndInstance> marsToolList = loadMarsTools();
 		if (!marsToolList.isEmpty()) {
 			menu = new JMenu(TOOLS_MENU_NAME);
 			menu.setMnemonic(KeyEvent.VK_T);
 			// traverse array list and build menu
 			MarsToolClassAndInstance listItem;
 			for (int i = 0; i < marsToolList.size(); i++) {
-				listItem = (MarsToolClassAndInstance) marsToolList.get(i);
+				listItem = marsToolList.get(i);
 				menu.add(new ToolAction(listItem.marsToolClass, listItem.marsToolInstance.getName()));
 			}
 		}
@@ -102,9 +100,9 @@ public class ToolLoader {
 	 * ZipFile, get the ZipEntry enumeration, find the class files in the tools
 	 * folder, then continue as before.
 	 */
-	private ArrayList loadMarsTools() {
-		ArrayList toolList = new ArrayList();
-		ArrayList candidates = FilenameFinder.getFilenameList(this.getClass().getClassLoader(),
+	private ArrayList<MarsToolClassAndInstance> loadMarsTools() {
+		ArrayList<MarsToolClassAndInstance> toolList = new ArrayList<>();
+		ArrayList<String> candidates = FilenameFinder.getFilenameList(this.getClass().getClassLoader(),
 				TOOLS_DIRECTORY_PATH, CLASS_EXTENSION);
 		// Add any tools stored externally, as listed in Config.properties file.
 		// This needs some work, because mars.Globals.getExternalTools() returns
@@ -114,9 +112,9 @@ public class ToolLoader {
 		// pathname.
 		// candidates.addAll(mars.Globals.getExternalTools()); // this by itself is not
 		// enough...
-		HashMap tools = new HashMap();
+		HashMap<String, String> tools = new HashMap<>();
 		for (int i = 0; i < candidates.size(); i++) {
-			String file = (String) candidates.get(i);
+			String file = candidates.get(i);
 			// Do not add class if already encountered (happens if run in MARS
 			// development directory)
 			if (tools.containsKey(file)) {
@@ -129,13 +127,14 @@ public class ToolLoader {
 				try {
 					// grab the class, make sure it implements MarsTool, instantiate, add to menu
 					String toolClassName = CLASS_PREFIX + file.substring(0, file.indexOf(CLASS_EXTENSION) - 1);
-					Class clas = Class.forName(toolClassName);
+					Class<?> clas = Class.forName(toolClassName);
 					if (!MarsTool.class.isAssignableFrom(clas)
 							|| Modifier.isAbstract(clas.getModifiers())
 							|| Modifier.isInterface(clas.getModifiers())) {
 						continue;
 					}
-					toolList.add(new MarsToolClassAndInstance(clas, (MarsTool) clas.newInstance()));
+					toolList.add(new MarsToolClassAndInstance((Class<? extends MarsTool>) clas,
+							(MarsTool) clas.getDeclaredConstructor().newInstance()));
 				}
 				catch (Exception e) {
 					System.out.println("Error instantiating MarsTool from file " + file + ": " + e);
@@ -146,10 +145,10 @@ public class ToolLoader {
 	}
 
 	private class MarsToolClassAndInstance {
-		Class marsToolClass;
+		Class<? extends MarsTool> marsToolClass;
 		MarsTool marsToolInstance;
 
-		MarsToolClassAndInstance(Class marsToolClass, MarsTool marsToolInstance) {
+		MarsToolClassAndInstance(Class<? extends MarsTool> marsToolClass, MarsTool marsToolInstance) {
 			this.marsToolClass = marsToolClass;
 			this.marsToolInstance = marsToolInstance;
 		}
